--- a/ES6/package.json
+++ b/ES6/package.json
@@ -6,10 +6,17 @@
   "dependencies": {
     "@babel/cli": "^7.10.4",
     "@babel/core": "^7.10.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
     "@babel/preset-env": "^7.10.4"
   },
   "scripts": {
     "dev": "babel ./main.js -o ./bundle.js -w",
-    "dev2": "babel ./main2.js -o ./bundle2.js -w"
+    "dev2": "babel ./main2.js -o ./bundle2.js -w",
+    "dev3": "babel ./main3.js -o ./bundle3.js -w",
+    "dev4": "babel ./main4.js -o ./bundle4.js -w",
+    "dev5": "babel ./main5.js -o ./bundle5.js -w",
+    "dev6": "babel ./main6.js -o ./bundle6.js -w",
+    "dev7": "babel ./main7.js -o ./bundle7.js -w",
+    "dev8": "babel ./main8.js -o ./bundle8.js -w"
   }
 }
