--- a/ES6/package.json
+++ b/ES6/package.json
@@ -10,10 +10,12 @@
     "@babel/preset-env": "^7.10.4",
     "babel-loader": "^8.1.0",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
-    "dev": "webpack --mode=development -w",
+    "dev": "webpack-dev-server --mode=development",
+    "build": "webpack --mode=production",
     "basic-config": "babel ./basics/main1.js -o ./basics/bundle1.js -w",
     "basic-classes": "babel ./basics/main2.js -o ./basics/bundle2.js -w",
     "basic-const-let": "babel ./basics/main3.js -o ./basics/bundle3.js -w",
